--- a/MBNotifications.csproj
+++ b/MBNotifications.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\Options\PushALotOptions.cs" />
     <Compile Include="Configuration\Options\SMTPOptions.cs" />
     <Compile Include="Configuration\OverviewPage.cs" />
     <Compile Include="Configuration\NotificationsOptions.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\Pusher.cs" />
+    <Compile Include="Providers\PushALot.cs" />
     <Compile Include="Providers\SMTP.cs" />
     <Compile Include="Providers\PushOver.cs" />
     <Compile Include="ServerEntryPoint.cs" />
